kubernetes/apps/wordpress/hca/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wordpress-hca
spec:
  hostnames: ["${D_HCA}"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https-hca
  rules:
    - backendRefs:
        - name: wordpress-hca
          namespace: wordpress
          port: 8080
